--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -30,14 +30,21 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
 
-    <script src="components/angular/angular.js"></script>
+    <script src="components/angular/angular.js"></script> 
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/resources/user.js"></script>
+    <script src="scripts/resources/customersService.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/index.js"></script>
+    <script src="scripts/controllers/edit.js"></script>
+    <script src="scripts/controllers/controllers.js"></script>
+    
+    
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
